# ml-platform

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_PROGRESS.md  DATABASE_LAYER_COMPLETE.md  DEPLOYMENT.md  Dockerfile.agent  Dockerfile.api  Dockerfile.mlflow  Dockerfile.training  Dockerfile.ui  FOLDER_STRUCTURE.md  INDEX.md  JENKINS_FIXED.md  JENKINS_QUICK_START.md  JENKINS_STREAMLIT_SETUP.md  Jenkinsfile  NGROK_STREAMLIT_DEPLOYMENT.md  PHASE1_COMPLETE.md  QUICK_START.md  README.md  SETUP_CHECKLIST.md  SYSTEM_COMPLETE.md  TECH_STACK.md  VISUAL_SUMMARY.md  alembic.ini  docker-compose.yml  jenkins_cleanup.sh  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  setup.bat  setup.sh  setup_ngrok_streamlit.sh  streamlit_app.py
.github/workflows/: ci.yml  deploy.yml  retrain.yml
agent/: __init__.py  main.py
agent/core/: __init__.py  approval_manager.py  decision_engine.py  diagnosis_engine.py  executor.py
alembic/: env.py
alembic/versions/: .gitkeep
config/: __init__.py  logging_config.py  model_config.yml  settings.py
database/: README.md  __init__.py  connection.py  crud.py  migrations.py  models.py
monitoring/: __init__.py  drift_detector.py  performance_monitor.py
scripts/: download_data.py  init_database.py  setup_project.sh
services/api/: __init__.py  main.py
services/api/dependencies/: __init__.py  model_loader.py
services/api/middleware/: __init__.py  cors.py  logging.py
services/api/models/: __init__.py  request.py  response.py
services/api/routes/: __init__.py  health.py  metrics.py  predict.py
services/ui/: __init__.py  app.py
services/ui/pages/: 1_📊_Model_Performance.py  2_🔍_Drift_Analysis.py  3_⚙️_Approvals.py  4_📈_Historical_Trends.py  5_🤖_Agent_Activity.py
training/: __init__.py  data_loader.py  feature_engineering.py  model_evaluator.py  model_factory.py  model_selector.py  train_pipeline.py
validation/: __init__.py  data_validator.py  schema_definitions.py
