[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-platform"
version = "1.0.0"
description = "Production-grade MLOps platform with autonomous remediation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MLOps Team", email = "mlops@example.com"}
]
keywords = [
    "mlops",
    "machine-learning",
    "mlflow",
    "dvc",
    "fastapi",
    "streamlit",
    "monitoring",
    "autonomous-agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "xgboost>=2.0.0,<3.0.0",
    "lightgbm>=4.0.0,<5.0.0",
    "mlflow>=2.8.0,<3.0.0",
    "dvc>=3.0.0,<4.0.0",
    "great-expectations>=0.18.0,<1.0.0",
    "evidently>=0.4.0,<1.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "streamlit>=1.28.0,<2.0.0",
    "pydantic>=2.4.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "prometheus-client>=0.18.0,<1.0.0",
    "loguru>=0.7.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mlops-platform"
Documentation = "https://mlops-platform.readthedocs.io"
Repository = "https://github.com/yourusername/mlops-platform.git"
Issues = "https://github.com/yourusername/mlops-platform/issues"

[project.scripts]
mlops = "scripts.cli:main"

[tool.setuptools]
packages = ["config", "training", "validation", "monitoring", "services", "reporting", "notifications", "database"]

[tool.setuptools.package-data]
config = ["*.yml", "*.yaml"]
reporting = ["templates/*.html"]

# ============================================================
# Black configuration
# ============================================================
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | __pycache__
  | build
  | dist
  | mlruns
)/
'''

# ============================================================
# Ruff configuration
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py310"

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "mlruns",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py

# ============================================================
# isort configuration
# ============================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/mlruns/*"]

# ============================================================
# MyPy configuration
# ============================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "mlflow.*",
    "evidently.*",
    "great_expectations.*",
    "dvc.*",
    "lightgbm.*",
    "xgboost.*",
]
ignore_missing_imports = true

# ============================================================
# Pytest configuration
# ============================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================
# Coverage configuration
# ============================================================
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/mlruns/*",
    "setup.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================
# Bandit configuration (security linting)
# ============================================================
[tool.bandit]
exclude_dirs = ["tests", "venv", "mlruns"]
skips = ["B101", "B601"]  # Skip assert_used and paramiko_calls
